:art: markdown doc & file filter

--- a/xss-filter/.settings/org.eclipse.wst.common.component
+++ b/xss-filter/.settings/org.eclipse.wst.common.component
@@ -4,5 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/java/resources"/>
         <wb-resource deploy-path="/" source-path="/src/test/main"/>
         <wb-resource deploy-path="/" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <property name="context-root" value="xss-filter-1.0"/>
+        <property name="java-output-path" value="/xss-filter/target/classes"/>
     </wb-module>
 </project-modules>
